opam-version: "2.0"
name: "daft"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/daft"
bug-reports: "https://github.com/UnixJunkie/daft/issues"
dev-repo: "git+https://github.com/UnixJunkie/daft.git"
license: "CeCILL-C"
build: [
  [make]
]
install: [
  ["cp" "-t" bin "daft" "daft_ds" "daft_mds"]
]
remove: [
  ["rm" "-f" "%{bin}%/daft" "%{bin}%/daft_ds" "%{bin}%/daft_mds"]
]
depends: [
  "obuild" {build}
  "dolog" {>= "4.0.0"}
  "batteries"
  "fileutils"
  "zmq"
  "cryptokit"
  "base-unix"
]
synopsis: "DAFT Allows File Transfers"
description: """
Summary:
--------

Distributed file transfer application in user space.

Securely move data files during distributed computational experiments and
provide a global view of all files, even when there is no distributed
filesystem and probably faster than NFS for large files.

Available commands:
-------------------

    put filename: add/publish a given file into the system.

    bcast filename: equivalent to put then send the file to all nodes.

    get filename: retrieve a file previously published into the system.

    ls [-l]: list all files known to the system and optionally where
             their chunks are.
"""
